--- a/.prettierrc
+++ b/.prettierrc
@@ -8,19 +8,13 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "endOfLine": "lf",
-   plugins: ['./node_modules/prettier-plugin-astro'],
-  overrides: [
+  "plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"],
+  "overrides": [
     {
-      files: ['.*', '*.json', '*.md', '*.toml', '*.yml'],
-      options: {
-        useTabs: false,
-      },
-    },
-    {
-      files: ['**/*.astro'],
-      options: {
-        parser: 'astro',
-      },
-    },
-  ],
+      "files": "*.astro",
+      "options": {
+        "parser": "astro"
+      }
+    }
+  ]
 }
