Add support for projected views of the models

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "models",
   "version": "2.1.0",
   "scripts": {
+    "generate": "./scripts/render-svg.fish",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
